# Python-Random-Stuff

./: armstrong_numbers.py  collatz_conjecture.py  darts.py  gigasecond.py  isogram.py  matrix.py  pangram.py  phone_number.py  resistor_color.py  resistor_color_duo.py  reverse_string.py  rna_transcription.py  robot_name.py  series.py  space_age.py  two_fer.py  yacht.py
dnd_character/: dnd_character.py  dnd_character2.py
hamming/: hamming.py  hamming2.py
outros/: fat.py  fence_cipher.py  fib.py  pizza.py  random_commit.py  speed_test.py  test.py  to_import.py  troco.py
outros/conf-editor/: .gitignore  LICENSE  editor.py  pyproject.toml  requirements.txt  run
outros/conf-editor/src/editor/: __init__.py  __main__.py  process.py
outros/hiccup/: .pylintrc  hiccup.py  lrequirements.txt  pyproject.toml  requirements.txt  run
outros/hiccup/src/hiccup/: __init__.py  __main__.py  hiccup.py
raindrops/: raindrops.py  raindrops2.py  raindrops3.py  raindrops4.py
twelve_days/: twelve_days.py  twelve_days2.py
word_count/: word_count.py  word_count2.py
